fixing issues in alignment

--- a/frontend/src/pages/chatbot/Chatbot.scss
+++ b/frontend/src/pages/chatbot/Chatbot.scss
@@ -2,10 +2,10 @@
 #root {
     max-width: 1280px;
    // margin: 0 auto;
-   // padding: 2rem;
+   //padding: 2rem;
     //text-align: center;
     background-color: #f4f4f4;
-    height: 100vh;
+   //height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -32,7 +32,7 @@
   }
   
   button {
-   // padding: 10px 20px;
+    padding: 10px 20px;
     background-color: #4a4e69;
     color: #fff;
     font-size: 1rem;
@@ -66,7 +66,7 @@
   /* Chatbot styling effect */
   .chat-container {
     background: #ffffff;
-    //padding: 20px;
+    padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     width: 500px;
@@ -92,7 +92,7 @@
   .chat-footer {
     width: 100%;
     margin-top: 10px;
-   // display: flex;
+   display: flex;
     flex-direction: column;
   }
   
@@ -113,7 +113,7 @@
     height: 450px;
     background: #f9f9f9;
     border-radius: 10px;
-  //  padding: 10px;
+    padding: 10px;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
